# dep2pict

./: .gitignore  .merlin  Makefile  Makefile.in  _tags  configure  dep2pict.opam  dev_install  dune-project  myocamlbuild.ml  opam
config/: Makefile.in  configure.ac  configure.in
examples/: logo.dep  nivre.dep
opam/: descr  opam
packaging/: create_portfile.sh  make_deb.sh
packaging/DEBIAN/: control  postinst  postrm
packaging/opam/: opam
packaging/portfile/: Portfile.default
src/: Makefile.in  dep2pict.glade  dep2pict_main.ml  dune  global.ml  gui.ml  main.ml
